--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "credit-card-validator",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.16.5",
+    "next": "14.0.2",
+    "prettier": "^3.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2"
-  }
+    "eslint-config-next": "14.0.2",
+    "postcss": "^8",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "name": "credit-card-validator",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "format": "npx prettier . --write",
+    "lint": "next lint",
+    "start": "next start"
+  },
+  "version": "0.1.0"
 }
