--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier-plugin-organize-attributes": "^1.0.0",
     "tailwindcss": "^3.3.0",
@@ -26,7 +30,8 @@
     "dev": "next dev",
     "format": "npx prettier . --write",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "version": "0.1.0"
 }
